model Conversation {
  id        String    @id @default(uuid())
  matchId   String    @unique
  match     Match     @relation(fields: [matchId], references: [id], onDelete: Cascade)
  messages  Message[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  @@map("conversations")
}
