model DatePlan {
  id            String     @id @default(uuid())
  matchId       String
  match         Match      @relation(fields: [matchId], references: [id], onDelete: Cascade)
  proposerId    String
  proposer      User       @relation("DateProposer", fields: [proposerId], references: [id], onDelete: Cascade)
  receiverId    String
  receiver      User       @relation("DateReceiver", fields: [receiverId], references: [id], onDelete: Cascade)

  // snapshot of the chosen place at the time of the invite — don't re-fetch from Mapbox later
  venueName     String
  venueAddress  String
  latitude      Float?
  longitude     Float?
  mapboxPlaceId String?

  date      DateTime
  startTime DateTime
  endTime   DateTime?
  status    DateStatus @default(PENDING)
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  ratings DateRating[]
  messages Message[]

  @@map("date_plans")
}
