model User {
  // --- Auth / identity ---
  id              String   @id @default(uuid())
  phone           String?  @unique
  email           String?  @unique
  role            Role     @default(USER)
  isEmailVerified Boolean  @default(false)
  isPhoneVerified Boolean  @default(false)
  // Set by A-03 once the onboarding submission lands. Drives `nextStep` and
  // whether the account appears in Discovery.
  isProfileComplete Boolean @default(false)

  // Admin-controlled trust badge. Nothing in the user-facing API sets it —
  // completing a profile is not the same as being vouched for.
  isUserVerified  Boolean  @default(false)

  // When an OTP was last dispatched to this account. Drives the resend
  // cooldown shared by `POST /auth/login` and `POST /auth/resend-otp`.
  lastOtpSentAt   DateTime?

  // Separate timer for the profile contact-verification flow. Sharing one
  // column would mean logging in blocks you from verifying an email you added
  // seconds later — a different purpose, so a different cooldown.
  lastContactOtpSentAt DateTime?

  // --- Basic profile ---
  firstName    String?
  lastName     String?
  username     String?   @unique
  birthDate    DateTime?
  occupation   String?
  gender       Gender?
  interestedIn Gender?

  // --- Lifestyle ---
  smoker      HabitFrequency?
  alcohol     HabitFrequency?
  kids        KidsStatus?
  wantsKids   Boolean?
  lookingFor  LookingFor?

  // --- Location ---
  // `latitude`/`longitude` are the last known fix; they stay null when the
  // user refuses the permission prompt, so every distance feature has to
  // tolerate their absence. `locationUpdatedAt` is what makes a stale fix
  // distinguishable from a fresh one.
  lastLocation       String?
  latitude           Float?
  longitude          Float?
  locationUpdatedAt  DateTime?
  locationPermission LocationPermission @default(NOT_ASKED)

  // --- Body ---
  heightCm Int?
  weightKg Int?

  // --- Interests ---
  // Real enums rather than free strings, so the database rejects a value the
  // interests screen never offered — same guarantee as every other enum here.
  creativity      CreativityInterest[]
  sports          SportInterest[]
  moviesAndDramas MovieAndDramaInterest[]

  // --- Verification / media ---
  images                Image[]
  selfieUrl             String?
  selfieVerified        Boolean @default(false)
  notificationsEnabled  Boolean @default(true)

  // --- Billing / meta ---
  subscriptionId String?
  lastLoginAt    DateTime?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  // --- Discovery ---
  discoveryPreference      DiscoveryPreference?
  discoveryActionsGiven    DiscoveryAction[]    @relation("DiscoveryActor")
  discoveryActionsReceived DiscoveryAction[]    @relation("DiscoveryTarget")

  // --- Matching / chat ---
  matchesAsLow  Match[]   @relation("MatchLow")
  matchesAsHigh Match[]   @relation("MatchHigh")
  messages      Message[]

  // --- Games ---
  gameAnswers GameAnswer[]

  // --- Dates ---
  datePlansProposed   DatePlan[]   @relation("DateProposer")
  datePlansReceived   DatePlan[]   @relation("DateReceiver")
  dateRatingsGiven    DateRating[] @relation("DateReviewer")
  dateRatingsReceived DateRating[] @relation("DateReviewed")

  // --- Trust ---
  trustScore       TrustScore?
  trustScoreEvents TrustScoreEvent[]

  // --- Billing / platform ---
  subscriptions Subscription[]
  notifications Notification[]
  devices       Device[]

  // --- Safety ---
  blocksGiven    Block[]  @relation("Blocker")
  blocksReceived Block[]  @relation("Blocked")
  reportsFiled   Report[] @relation("Reporter")
  reportsReceived Report[] @relation("Reported")

  // --- Social ---
  successStoriesAuthored SuccessStory[]         @relation("StoryAuthor")
  successStoriesFeatured SuccessStory[]         @relation("StoryPartner")
  successStoryLikes      SuccessStoryLike[]
  successStoryComments   SuccessStoryComment[]

  // Supports the bounding-box prefilter the discovery feed runs before it
  // computes exact great-circle distances.
  @@index([latitude, longitude])
  @@map("users")
}
